# calculator-cli

./: README.md  pyproject.toml
calculator_cli/: main.py
riguima_calculator_cli/: main.py
