[tool.poetry]
name = "riguima-calculator-cli"
version = "0.1.1"
description = "Calculator CLI made from app ideas repo: https://github.com/florinpop17/app-ideas"
authors = ["Richard <richard.alexsander.guima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
isort = "^5.12.0"
blue = "^0.9.1"

[tool.poetry.scripts]
calculator = 'riguima_calculator_cli.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
